--- a/.gitignore
+++ b/.gitignore
@@ -136,7 +136,6 @@ celerybeat.pid
 
 # Environments
 myenv/
-
 .env
 .envrc
 .venv
@@ -207,3 +206,34 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+
+# ML/Data specific
+*.pkl
+*.joblib
+artifacts/
+models/
+data/raw/
+data/processed/
+logs/
+.mlflow/
+
+# Datasets
+*.csv
+*.json
+*.txt
+*.tsv
+
+# Streamlit
+.streamlit/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
